issue#34: Text not wrapping in guest list

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,7 @@ p{
   font-size: 20px;
   font-weight: 300;
   margin: 0 0 20px 0;
+  overflow-wrap: break-word;
 }
 
 body {
